--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -18,4 +18,15 @@ jobs:
         uses: actions/checkout@v2
       - run: curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
       - run: php phpcs.phar --standard=${{ github.workspace }}/test/phpcs/Symfony src
+  tests-unitaire:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup PHP with PECL extension
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: wget -O phpunit.phar https://phar.phpunit.de/phpunit-9.phar
+      - run: php phpunit.phar --bootstrap ${{ github.workspace }}/src/autoload.php ${{ github.workspace }}/test/units/
 
